tests/snapshots/run_wpt_conformance__litert_matmul_float16_3D_and_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
matmul.https.any.js matmul float16 3D and 2D tensors, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 3, 4];
    inputB: f16[4, 1];
  }

  nodes {
    [output] = matmul(inputA, inputB, label="");
  }

  outputs { output; }
}
