tests/snapshots/run_wpt_conformance__litert_matmul_float16_4D_and_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
matmul.https.any.js matmul float16 4D and 4D tensors, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[2, 1, 3, 4];
    inputB: f16[2, 1, 4, 5];
  }

  nodes {
    [output] = matmul(inputA, inputB, label="");
  }

  outputs { output; }
}
