tests/snapshots/run_wpt_conformance__litert_matmul_float32_4D_and_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "matmul.https.any.js",
    "matmul float32 4D and 3D tensors",
    "litert",
    "PASS",
)
